# epac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ebook.md  pattern.md
epac/: __init__.py  _llm.py  cli.py  pipeline.py  spec_init.py  state.py
epac/artifacts/: __init__.py  implementation.py  plan.py  review.py  spec.py
epac/integrations/: __init__.py  _builtin.py
epac/integrations/github/: __init__.py  actor.py  critic.py  workflow.py
epac/roles/: __init__.py  actor.py  base.py  critic.py  expert.py  planner.py
examples/software_dev/: run_pipeline.py
tests/: test_artifacts.py  test_pipeline.py  test_spec_init.py  test_state.py
